# svkw

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
svkw/: CMakeLists.txt
svkw/types/: CMakeLists.txt  types.cpp  types.hpp
svkw/utility/: CMakeLists.txt  compressed_pair.hpp  concepts.hpp  pack.hpp  slice.hpp  types.hpp  verify.cpp  verify.hpp
svkw/wrapper/: CMakeLists.txt  any_wrapper.hpp  fwd.hpp  handle_only.hpp  object_destroy.hpp  object_free.hpp  owner_destroy.hpp  unique.hpp
